[metadata]
name = seedboxtools
version = attr: seedboxtools.__version__
author = Manuel Amador (Rudd-O)
author_email = rudd-o@rudd-o.com
description = A tool to automate downloading finished torrents from a seedbox
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Rudd-O/seedboxtools
classifiers =
    Programming Language :: Python :: 3 :: Only
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Environment :: No Input/Output (Daemon)
    Intended Audience :: End Users/Desktop
    Intended Audience :: System Administrators
    License :: OSI Approved :: GNU Lesser General Public License v2 (LGPLv2)
    License :: OSI Approved :: GNU General Public License (GPL)
    Operating System :: POSIX :: Linux
    Topic :: Communications :: File Sharing
    Topic :: Utilities
keywords =
    seedbox
    TorrentFlux
    Transmission
    PulsedMedia
    torrents
    download

[options]
install_requires =
    iniparse
    requests
package_dir =
    = src
packages = find:
scripts =
    bin/configleecher
    bin/leechtorrents
    bin/uploadtorrents

[options.data_files]
lib/systemd/system = service/leechtorrents@.service
share/applications = desktop/uploadtorrents.desktop
etc/default = default/leechtorrents
share/doc/seedboxtools = BUGS

[options.packages.find]
where = src
